update old reference web links

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -12,31 +12,31 @@
   <div class="header png"><h2>Use HERON Query and Analysis Tool</h2>
   <ul>
     <li py:if="'checked' in repositoryAccess">
-      <a href="${i2b2_login_path}"
-        ><font size = "4">Start HERON Search</font></a>
+      <a href="${i2b2_login_path}"><font size = "4">Start HERON Search</font></a>
     </li>
     <li py:if="'checked' not in repositoryAccess">
-      <button disabled="disabled"
-        ><font size = "4">Start HERON Search</font></button>
+      <button disabled="disabled"><font size = "4">
+        Start HERON Search</font>
+      </button>
     </li>
   </ul>
   </div>
 
   <div class="header png"><h3>Online Training</h3>
   <ul>
-	<li><a href="http://www.kumc.edu/ea-mi/medical-informatics/heron.html" target = "_blank" title ="HERON Introduction">HERON Introduction</a>
+	<li><a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron.html" target = "_blank" title ="HERON Introduction">HERON Introduction</a>
     </li>
-	<li><a href="http://www.kumc.edu/ea-mi/medical-informatics/heron/faqs.html" target = "_blank" title = "HERON FAQ">HERON FAQs</a>
+	<li><a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/faqs.html" target = "_blank" title = "HERON FAQ">HERON FAQs</a>
 	</li>
-	<li><a href="http://www.kumc.edu/ea-mi/medical-informatics/heron/heron-training-videos.html" target = "_blank" title = "HERON training videos">HERON Training Videos</a>
+  <li><a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/heron-training-videos.html" target = "_blank" title = "HERON training videos">HERON Training Videos</a>
 	</li>
-	<li><a href="http://www.kumc.edu/ea-mi/medical-informatics/heron/heron-manual.html" target = "_blank" title = "HERON Guide">HERON Guide</a>
+	<li><a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/heron-manual.html" target = "_blank" title = "HERON Guide">HERON Guide</a>
 	</li>
-	<li><a href="http://www.kumc.edu/ea-mi/medical-informatics/heron/requesting-data.html" target = "_blank" title = "Requesting Data">Data Request Process</a>
+	<li><a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/requesting-data.html" target = "_blank" title = "Requesting Data">Data Request Process</a>
 	</li>
-	<li><a href="http://www.kumc.edu/ea-mi/medical-informatics/heron/receiving-data.html" target = "_blank" title = "Receiving Data">Understanding HERON Data</a>
+	<li><a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/receiving-data.html" target = "_blank" title = "Receiving Data">Understanding HERON Data</a>
 	</li>
-	<li><a href="http://www.kumc.edu/ea-mi/medical-informatics/heron/frontierspioneers-registries.html" target = "_blank" title = "Recruitment Registries">Frontiers and Pioneers Participant Recruitment Registry Information</a>
+	<li><a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/heron/frontiers-and-pioneers-registries.html" target = "_blank" title = "Recruitment Registries">Frontiers and Pioneers Participant Recruitment Registry Information</a>
 	</li>
   </ul>
   </div>
@@ -161,7 +161,7 @@
       <li>Complete the following form and click submit.</li>
     </ul>
 	<p>Sponsorship requests take approximately one week to be approved. Once approved, users can begin searching HERON. More detailed instructions are found on our 
-	<a href = "http://www.kumc.edu/ea-mi/medical-informatics/heron/sponsorship.html" title ="Sponsorship">HERON Training Pages</a>. </p>
+	<a href = "https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/sponsorship.html" title ="Sponsorship">HERON Training Pages</a>. </p>
   </div>
   
   <div><h2>HERON Data Request Process</h2>
@@ -174,13 +174,13 @@
   <li>Complete the following form and click submit</li>
   </ol>
 	<p>Data requests take approximately two weeks for approval and the release of data to the study team. All individuals needing access to the data must sign the <a href="https://heron.kumc.edu/heron/dua_survey">data use agreement</a> prior to release of data. 
-	More detailed instructions are found on our <a href = "http://www.kumc.edu/ea-mi/medical-informatics/heron/requesting-data.html" target = "_blank" title = "Requesting Data">HERON Training Pages</a>. </p>
+	More detailed instructions are found on our <a href = "https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/requesting-data.html" target = "_blank" title = "Requesting Data">HERON Training Pages</a>. </p>
   </div>
   
   <div><h2>More Information</h2>
     <ul>
       <li>KUMC participates in the <a href = "https://www.gpcnetwork.org/" target = "_blank"> Greater Plains Collaborative (GPC) </a> which is a network of 12 leading medical centers in 8 states. The network brings together data on over 16 million patients. Investigators from KUMC are able to request data from participating sites. </li>
-      <li>Patient recruitment is possible through the <a href = "http://www.kumc.edu/ea-mi/medical-informatics/heron/frontierspioneers-registries.html" target = "_blank" title = "Recruitment Registries"> Frontiers and Pioneers Research Registries</a>.</li>
+      <li>Patient recruitment is possible through the <a href = "https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/frontiers-and-pioneers-registries.html" target = "_blank" title = "Recruitment Registries"> Frontiers and Pioneers Research Registries</a>.</li>
       <li>HERON data has been cited in several <a href="http://frontiersresearch.org/frontiers/node/452" target = "blank">publications</a>.</li>
       <li>HERON is supported in part by funds from CTSA Award #UL1TR000001 and Patient-Centered Outcomes Research Institute (PCORI) Program Award #CDRN-1306-04631.</li>
     </ul>
@@ -197,7 +197,7 @@
   </div>
   </div>
 
-  <div class="col-12 col-md-3">
+  <div class="col-11 col-md-3">
     <div class="span-7 last">
       <h3>Login Credentials</h3>
       <form action="${logout_path}" method="post">
