--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -9,77 +9,57 @@
 <!-- todo: consider passing admin_mailbox in from python -->
 <body py:with="admin_mailbox='misupport@kumc.edu'">
   <div class="col-12 col-md-3">
-  <div class="header png"><h2>Use HERON Query and Analysis Tool</h2>
-  <ul>
-    <li py:if="'checked' in repositoryAccess">
-      <a href="${i2b2_login_path}"><font size = "4">Start HERON Search</font></a>
-    </li>
-    <li py:if="'checked' not in repositoryAccess">
-      <button disabled="disabled"><font size = "4">
-        Start HERON Search</font>
+    <div class="header">
+      <h5>Use HERON Query and Analysis Tool</h5>
+    </div>
+    <div py:if="'checked' in repositoryAccess">
+      <a  class="promo-link" href="${i2b2_login_path}"><i class="fas fa-chevron-right"></i>Start HERON Search</a>
+    </div>
+    <div py:if="'checked' not in repositoryAccess">
+      <button disabled="disabled">
+        Start HERON Search
       </button>
-    </li>
-  </ul>
-  </div>
+    </div>
+  
+    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron.html"><i class="fas fa-chevron-right"></i>HERON Introduction</a>
+    <p>
+      Online Training
+    </p>
+    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron.html" target = "_blank" title ="HERON Introduction"><i class="fas fa-chevron-right"></i>HERON Introduction</a>
+    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/faqs.html" target = "_blank" title = "HERON FAQ"><i class="fas fa-chevron-right"></i>HERON FAQs</a>
+    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/heron-training-videos.html" target = "_blank" title = "HERON training videos"><i class="fas fa-chevron-right"></i>HERON Training Videos</a>
+    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/heron-manual.html" target = "_blank" title = "HERON Guide"><i class="fas fa-chevron-right"></i>HERON Guide</a>
+    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/requesting-data.html" target = "_blank" title = "Requesting Data"><i class="fas fa-chevron-right"></i>Data Request Process</a>
+    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/receiving-data.html" target = "_blank" title = "Receiving Data"><i class="fas fa-chevron-right"></i>Understanding HERON Data</a>
+    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/heron/frontiers-and-pioneers-registries.html" target = "_blank" title = "Recruitment Registries"><i class="fas fa-chevron-right"></i>Frontiers and Pioneers Participant Recruitment Registry Information</a>
+  
+    <div class="header">
+      <h5>In-Person Training</h5>
+    </div>
+    <a class="promo-link" href="https://redcap.kumc.edu/surveys/?s=L72oqA" target = "_blank" ><i class="fas fa-chevron-right"></i>Lunch and Learn Clinic</a>
+    <a class="promo-link" href="https://redcap.kumc.edu/surveys/?s=3DHDJMKN4A" target = "_blank"><i class="fas fa-chevron-right"></i>Office Hours</a>
 
-  <div class="header png"><h3>Online Training</h3>
-  <ul>
-	<li><a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron.html" target = "_blank" title ="HERON Introduction">HERON Introduction</a>
-    </li>
-	<li><a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/faqs.html" target = "_blank" title = "HERON FAQ">HERON FAQs</a>
-	</li>
-  <li><a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/heron-training-videos.html" target = "_blank" title = "HERON training videos">HERON Training Videos</a>
-	</li>
-	<li><a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/heron-manual.html" target = "_blank" title = "HERON Guide">HERON Guide</a>
-	</li>
-	<li><a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/requesting-data.html" target = "_blank" title = "Requesting Data">Data Request Process</a>
-	</li>
-	<li><a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/receiving-data.html" target = "_blank" title = "Receiving Data">Understanding HERON Data</a>
-	</li>
-	<li><a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/heron/frontiers-and-pioneers-registries.html" target = "_blank" title = "Recruitment Registries">Frontiers and Pioneers Participant Recruitment Registry Information</a>
-	</li>
-  </ul>
-  </div>
+    <div class="header">
+      <h5>Regulatory Requests</h5>
+    </div>
+    <a class="promo-link" href="${sponsorship_path}"><i class="fas fa-chevron-right"></i>HERON Sponsorship Request</a>
+    <a class="promo-link" href="${data_use_path}"><i class="fas fa-chevron-right"></i>HERON Data Use or Recruitment Request</a>
+    <a class="promo-link" href="${greenheron_use_path}"><i class="fas fa-chevron-right"></i>Green HERON Sponsorship or Data Use Request</a>
   
-    <div class="header png"><h3>In-Person Training</h3>
-  <ul>
-	<li><a href="https://redcap.kumc.edu/surveys/?s=L72oqA" target = "_blank" >Lunch and Learn Clinic</a>
-	</li>
-	<li><a href="https://redcap.kumc.edu/surveys/?s=3DHDJMKN4A" target = "_blank">Office Hours</a>
-	</li>
-  </ul>
-  </div>
-
-  <div class="header png">
-    <h3>Regulatory Requests</h3>
-  <ul>
-    <li><a href="${sponsorship_path}">HERON Sponsorship Request</a>
-    </li>
-    <li><a href="${data_use_path}">HERON Data Use or Recruitment Request</a>
-    </li>
-    <li><a href="${greenheron_use_path}">Green HERON Sponsorship or Data Use Request</a>
-    </li>
-  </ul>
-  </div>
-  
-  <div py:if="droc" class="header png"><h3>Oversight</h3>
-  <ul>
-    <li><a href="https://redcap.kumc.edu/redcap_v4.7.0/index.php?pid=238">DROC Review Forms</a></li>
-    <li><a href="reports/usage_small">Usage Audit Report</a></li>
-  </ul>
-  </div>
-  
-  <div class="header png"><h3>Other Tools</h3>
-  <ul>
-    <li>
-      <a href="reports/usage">HERON Usage Report</a>
-    </li>
-    <li>
-      <a href="reports/performance">Current HERON Users and Recent Query Performance</a>
-    </li>
-    <li><a href="https://redcap.kumc.edu/" target = "_blank" title = "REDCap">REDCap</a></li>
-  </ul>
-  </div>
+    <div py:if="droc">
+      <div class="header">
+        <h5>Oversight</h5>
+      </div>
+    </div>
+    <a class="promo-link" href="https://redcap.kumc.edu/redcap_v4.7.0/index.php?pid=238"><i class="fas fa-chevron-right"></i>DROC Review Forms</a>
+    <a class="promo-link" href="reports/usage_small"><i class="fas fa-chevron-right"></i>Usage Audit Report</a>
+    
+    <div class="header">
+      <h5>Other Tools</h5>
+    </div>
+    <a class="promo-link" href="reports/usage"><i class="fas fa-chevron-right"></i>HERON Usage Report</a>
+    <a class="promo-link" href="reports/performance"><i class="fas fa-chevron-right"></i>Current HERON Users and Recent Query Performance</a>
+    <a class="promo-link" href="https://redcap.kumc.edu/" target = "_blank" title = "REDCap"><i class="fas fa-chevron-right"></i>REDCap</a></li>
   </div>
 
   <div class="col-12 col-md-6">
