fix tag mismmatch

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -23,6 +23,51 @@
       </button>
     </div>
 
+    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron.html"><i class="fas fa-chevron-right"></i>HERON Introduction</a>
+    <p>
+      Online Training
+    </p>
+
+    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron.html" target = "_blank" title ="HERON Introduction"><i class="fas fa-chevron-right"></i>HERON Introduction</a>
+    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/faqs.html" target = "_blank" title = "HERON FAQ"><i class="fas fa-chevron-right"></i>HERON FAQs</a>
+    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/heron-training-videos.html" target = "_blank" title = "HERON training videos"><i class="fas fa-chevron-right"></i>HERON Training Videos</a>
+    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/heron-manual.html" target = "_blank" title = "HERON Guide"><i class="fas fa-chevron-right"></i>HERON Guide</a>
+    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/requesting-data.html" target = "_blank" title = "Requesting Data"><i class="fas fa-chevron-right"></i>Data Request Process</a>
+    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/receiving-data.html" target = "_blank" title = "Receiving Data"><i class="fas fa-chevron-right"></i>Understanding HERON Data</a>
+    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/heron/frontiers-and-pioneers-registries.html" target = "_blank" title = "Recruitment Registries"><i class="fas fa-chevron-right"></i>Frontiers and Pioneers Participant Recruitment Registry Information</a>
+
+    <div class="header">
+      <h5>In-Person Training</h5>
+    </div>
+
+    <a class="promo-link" href="https://redcap.kumc.edu/surveys/?s=L72oqA" target = "_blank" ><i class="fas fa-chevron-right"></i>Lunch and Learn Clinic</a>
+    <a class="promo-link" href="https://redcap.kumc.edu/surveys/?s=3DHDJMKN4A" target = "_blank"><i class="fas fa-chevron-right"></i>Office Hours</a>
+
+    <div class="header">
+      <h5>Regulatory Requests</h5>
+    </div>
+
+    <a class="promo-link" href="${sponsorship_path}"><i class="fas fa-chevron-right"></i>HERON Sponsorship Request</a>
+    <a class="promo-link" href="${data_use_path}"><i class="fas fa-chevron-right"></i>HERON Data Use or Recruitment Request</a>
+    <a class="promo-link" href="${greenheron_use_path}"><i class="fas fa-chevron-right"></i>Green HERON Sponsorship or Data Use Request</a>
+
+    <div py:if="droc">
+      <div class="header">
+        <h5>Oversight</h5>
+      </div>
+    </div>
+    
+    <a class="promo-link" href="https://redcap.kumc.edu/redcap_v4.7.0/index.php?pid=238"><i class="fas fa-chevron-right"></i>DROC Review Forms</a>
+    <a class="promo-link" href="reports/usage_small"><i class="fas fa-chevron-right"></i>Usage Audit Report</a>
+    
+    <div class="header">
+      <h5>Other Tools</h5>
+    </div>
+    
+    <a class="promo-link" href="reports/usage"><i class="fas fa-chevron-right"></i>HERON Usage Report</a>
+    <a class="promo-link" href="reports/performance"><i class="fas fa-chevron-right"></i>Current HERON Users and Recent Query Performance</a>
+    <a class="promo-link" href="https://redcap.kumc.edu/" target = "_blank" title = "REDCap"><i class="fas fa-chevron-right"></i>REDCap</a>
+    
   </div>
 
   <div class="col-12 col-md-6">
