align and format heron bird picture

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -58,6 +58,7 @@
     <a class="promo-link" href="${data_use_path}"><i class="fas fa-chevron-right"></i>HERON Data Use or Recruitment Request</a>
     <br />
     <a class="promo-link" href="${greenheron_use_path}"><i class="fas fa-chevron-right"></i>Green HERON Sponsorship or Data Use Request</a>
+    <br />
 
     <div py:if="droc">
       <div class="header">
@@ -82,43 +83,22 @@
   </div>
 
   <div class="col-12 col-md-6">
-  <div id="heron-tricol-01" class="photo">
-  <!-- @@TODO: get the template to handle this style in the head -->
-  <style type="text/css">
-    .photo {text-align: center; margin-bottom: 1em }
-    .doit {text-align: center }
-    .warn {color: red }
-  </style>
+    
+    <div class="header"></div>
+      <h1>HERON Research Data Repository</h1>
+    </div>
 
-  </div>
-
-  <h1>HERON Research Data Repository</h1>
-
-  <!-- TODO: why does this para turn blue? -->
-
-  <table cellpadding = "30">
-  <tr>
-  <td valign = "top">
     <p>
+      <img src="av/220px-Heron_tricol_01.JPG" alt="" title="Heron" width="200" height="250" class="float-md-right ml-0 ml-md-3 mb-4 d-block img-fluid" />
       HERON (Healthcare Enterprise Repository for Ontological Narration) is a search discovery tool that allows KUMC faculty members to search de-identified data 
       from various hospital and medical center sources including Epic/O2 (the hospital electronic medical record). By combining the various data sources, researchers 
       can look at the data in new ways not available when viewing data in one source at a time.
-    </p>    
-  </td>
-  <td align = "center" valign = "top">
-  <img src="av/220px-Heron_tricol_01.JPG" alt="" />
-  <br /><small>photo credit:
-  <a href="https://commons.wikimedia.org/wiki/User:Chrharshaw" title = "wikimedia">Christopher Harshaw</a></small>
-  </td>
-  </tr>
-  </table> 
-
-  
-  <div><h2>Reasons to use HERON</h2>
-  <style>
-  ol.nomargin{margin:0 0 -1em 0em;}
-  li.nomargin{margin:0 0 0em 3em;}
-  ul.nomargin{margin:0.5em 0 -0.5em 0em;}
+    </p>
+    
+    <div class="header"></div>
+      <h5>Reasons to use HERON</h5>
+    </div>
+  <div>
   </style>
   <ol class = "nomargin">
 	<li class = "nomargin">Search HERON to find the number of KUMC patients who meet inclusion/exclusion criteria
