fix extra tag mismatch

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -84,7 +84,7 @@
 
   <div class="col-12 col-md-6">
     
-    <div class="header"></div>
+    <div class="header">
       <h1>HERON Research Data Repository</h1>
     </div>
 
@@ -95,7 +95,7 @@
       can look at the data in new ways not available when viewing data in one source at a time.
     </p>
     
-    <div class="header"></div>
+    <div class="header">
       <h5>Reasons to use HERON</h5>
     </div>
     
