minor content tag updates

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -199,7 +199,7 @@
 
     <form action="${logout_path}" method="post">
       <p>${affiliate.givenname} ${affiliate.sn} (<code>${affiliate.cn}</code>)
-      <input class="button button-banner btn mt-6" type="submit" value="logout" />
+      <input class="button button-blue btn mt-6" type="submit" value="logout" />
       </p>
     </form>
 
