--- a/heron_wsgi/templates/kumc_layout.xml
+++ b/heron_wsgi/templates/kumc_layout.xml
@@ -16,9 +16,9 @@
   <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/igxdev.css" />
   <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/css/kumc-custom.css" />
   <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/css/template2009/ku-sec.css" />
-  <link rel="stylesheet" type="text/css" href="/av/top_btn.css" />
-  <script async="async" src="/av/top_btn.js" type="text/javascript"></script>
- 
+  <script src="https://www.kumc.edu/Content/js/jquery-3.3.1.min.js" type="text/javascript"></script>
+  <script src="https://www.kumc.edu/Content/js/jquery-bootstrap.min.js" type="text/javascript"></script>
+  <script src="https://www.kumc.edu/Content/js/jquery-main.js" type="text/javascript"></script>
 <!-- jquery.showhids.js ? -->
 </py:match>
 
@@ -228,6 +228,36 @@
 
     <div id="page-builder" class="page-builder-container" style="display: none;"></div>
   </main>
+
+  <div class="tray--newsroom-contact">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="newsroom-bar-wrapper">
+            <div class="newsroom-bar">
+              <div class="newsroom-contact-bar">
+                <div class="h4">Internal Medicine</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-10 col-md-6">
+          <div class="address">
+            <p>University of Kansas Medical Center<br>Internal Medicine<br>Medical Informatics Division<br>Mailstop 3065<br>Student Center, 3001C<br>3901 Rainbow Boulevard<br>Kansas City KS 66160<br>913-588-7251<br><a href="mailto:misupport@kumc.edu">misupport@kumc.edu</a></p>
+          </div>
+        </div>
+        <div class="col-10 col-md-6">
+          <ul class="newsroom-links">
+            <li><a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine.html" target="_blank" title="Internal Medicine">
+              Internal Medicine<i class="fas fa-chevron-right"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <footer role="contentinfo">
         <div class="tray tray--flush tray--footer">
