--- a/heron_wsgi/templates/kumc_layout.xml
+++ b/heron_wsgi/templates/kumc_layout.xml
@@ -245,7 +245,15 @@
       <div class="row">
         <div class="col-10 col-md-6">
           <div class="address">
-            <p>University of Kansas Medical Center<br>Internal Medicine<br>Medical Informatics Division<br>Mailstop 3065<br>Student Center, 3001C<br>3901 Rainbow Boulevard<br>Kansas City KS 66160<br>913-588-7251<br><a href="mailto:misupport@kumc.edu">misupport@kumc.edu</a></p>
+            <p>University of Kansas Medical Center<br />
+              Internal Medicine<br />
+              Medical Informatics Division<br />
+              Mailstop 3065<br />
+              Student Center, 3001C<br />
+              3901 Rainbow Boulevard<br />
+              Kansas City KS 66160<br />
+              913-588-7251<br /><a href="mailto:misupport@kumc.edu">misupport@kumc.edu</a>
+            </p>
           </div>
         </div>
         <div class="col-10 col-md-6">
