--- a/heron_wsgi/templates/kumc_layout.xml
+++ b/heron_wsgi/templates/kumc_layout.xml
@@ -236,7 +236,7 @@
           <div class="newsroom-bar-wrapper">
             <div class="newsroom-bar">
               <div class="newsroom-contact-bar">
-                <div class="h4">Internal Medicine</div>
+                <div class="h4">Medical Informatics Division</div>
               </div>
             </div>
           </div>
@@ -258,8 +258,8 @@
         </div>
         <div class="col-10 col-md-6">
           <ul class="newsroom-links">
-            <li><a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine.html" target="_blank" title="Internal Medicine">
-              Internal Medicine<i class="fas fa-chevron-right"></i></a>
+            <li><a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics.html" target="_blank" title="Medical Informatics Division">
+              Medical Informatics Division<i class="fas fa-chevron-right"></i></a>
             </li>
           </ul>
         </div>
