send kumc to a different webpage

--- a/heron_wsgi/templates/kumc_layout.xml
+++ b/heron_wsgi/templates/kumc_layout.xml
@@ -28,7 +28,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="d-flex">
-                  <a id="main-logo-link" href="https://heron.kumc.edu/heron/" style=
+                  <a id="main-logo-link" href="https://www.kumc.edu/" target="_blank" style=
                     "font-size:0;">kumc.edu<img src=
                     "https://www.kumc.edu/_dev/logo--kumc-main.png" alt=
                     "KU Medical Center logo image" /></a>
