update all referenced html files with new section reference class

--- a/heron_wsgi/templates/report1.html
+++ b/heron_wsgi/templates/report1.html
@@ -48,7 +48,7 @@ td {border-right: 1px solid #CCC;}
 
 <h1>HERON Usage</h1>
 
-<div id="main">
+<div id="col-12 col-md-6">
 <ul>
 <li>Total queries: ${total_number_of_queries}</li>
 <li><a href="#by_user">Queries by User</a></li>
