--- a/heron_wsgi/templates/build_team.html
+++ b/heron_wsgi/templates/build_team.html
@@ -73,7 +73,7 @@
   </div>
 </py:def>
 
-<div id="main">
+<div id="col-12 col-md-6">
   <p>
     Select
     <py:if test="not investigator">a <strong>faculty sponsor</strong>
