--- a/heron_wsgi/templates/disclaimer.html
+++ b/heron_wsgi/templates/disclaimer.html
@@ -9,7 +9,7 @@
 <body>
 <h1>HERON Status Disclaimer</h1>
 
-<div id="main">
+<div id="col-12 col-md-6">
 <div class="span-20">
 
 <style type='text/css'>
