--- a/heron_wsgi/templates/performance.html
+++ b/heron_wsgi/templates/performance.html
@@ -40,7 +40,7 @@ table.report { width: 100% }
 
 <h1>HERON Performance</h1>
 
-<div id="main">
+<div id="col-12 col-md-6">
 
 <div id="current_sessions"><h2>Current Sessions</h2>
 <table class="report">
