test build_team with no styling

--- a/heron_wsgi/templates/build_team.html
+++ b/heron_wsgi/templates/build_team.html
@@ -2,15 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:py="http://genshi.edgewall.org/"
       xmlns:xi="http://www.w3.org/2001/XInclude">
-<xi:include href="kumc_layout.xml" />
 <head>
   <title>HERON: Build List of People for use in Oversight Request</title>
 </head>
 <body>
 
-<div id="col-12 col-md-6">
+<div>
   <p>
-    <img src="av/220px-Heron_tricol_01.JPG" alt="" title="Heron" width="250" height="300" class="float-md-right ml-0 ml-md-3 mb-4 d-block img-fluid" />
+    <img src="av/220px-Heron_tricol_01.JPG" alt="" title="Heron" width="250" height="300" />
     HERON (Healthcare Enterprise Repository for Ontological Narration) is a search discovery tool that allows KUMC faculty members to search de-identified data 
     from various hospital and medical center sources including Epic/O2 (the hospital electronic medical record). By combining the various data sources, researchers 
     can look at the data in new ways not available when viewing data in one source at a time.
