new layout heron_layout for sub templates

--- a/heron_wsgi/templates/build_team.html
+++ b/heron_wsgi/templates/build_team.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:py="http://genshi.edgewall.org/"
       xmlns:xi="http://www.w3.org/2001/XInclude">
+<xi:include href="kumc_layout.xml" />
 <head>
   <title>HERON: Build List of People for use in Oversight Request</title>
 </head>
@@ -72,7 +73,7 @@
   </div>
 </py:def>
 
-<div id="main">
+<div class="news-copy">
   <p>
     Select
     <py:if test="not investigator">a <strong>faculty sponsor</strong>
