--- a/heron_wsgi/templates/heron_layout.xml
+++ b/heron_wsgi/templates/heron_layout.xml
@@ -2,23 +2,19 @@
       xmlns:py="http://genshi.edgewall.org/">
 <py:match path="head" once="true">
    ${select('*')}
-  
-  <link rel="shortcut icon" href="https://www.kumc.edu/_dev/favicon.ico" />
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway:300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" />
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Anton|Muli:300,400,400italic,300italic|Goudy+Bookletter+1911|Oswald&amp;subset=latin,latin-ext" media="all" />
-  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/fontawesome/css/all.css" />
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Noto+Serif&amp;display=swap" />
-  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/bootstrap.min.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/icon-fonts.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/jquery-ui.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/target-firefox.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/main.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/igxdev.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/css/kumc-custom.css" />
+
+  <link href="https://www.kumc.edu/fontawesome/css/all.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif&amp;display=swap" rel="stylesheet" />
+  <link href="https://www.kumc.edu/Content/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://www.kumc.edu/Content/css/icon-fonts.css" rel="stylesheet" />
+  <link href="https://www.kumc.edu/Content/css/jquery-ui.css" rel="stylesheet" />
+  <link href="https://www.kumc.edu/Content/css/target-firefox.css" rel="stylesheet" />
+  <link href="https://www.kumc.edu/Content/css/main.css" rel="stylesheet" />
+  <link href="https://www.kumc.edu/Content/css/igxdev.css" rel="stylesheet" />
+  <link href="https://www.kumc.edu/css/kumc-custom.css" rel="stylesheet" />
   <script src="https://www.kumc.edu/Content/js/jquery-3.3.1.min.js" type="text/javascript"></script>
   <script src="https://www.kumc.edu/Content/js/jquery-bootstrap.min.js" type="text/javascript"></script>
   <script src="https://www.kumc.edu/Content/js/jquery-main.js" type="text/javascript"></script>
-<!-- jquery.showhids.js ? -->
 </py:match>
 
 <py:match path="body" once="true">
@@ -197,37 +193,24 @@
           <span></span>
         </div>
       </div>
-    </div>
-
-    <div class="container">
-      <div class="row">
-          <div class="col-12 col-md-3">
+      </div>
+      <div class="parent-section-link">
+        <a href="https://heron.kumc.edu/heron/"><i class="fas fa-arrow-left"></i> Heron </a>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="news-copy">
             <div class="x-up-card">
               <div class="content">
-                ${select(".//div[@class='col-12 col-md-3']/*|text()")}
+                 ${select(".//div[@class='news-copy']/*|text()")}
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6">
-            <div class="x-up-card">
-              <div class="content">
-                ${select(".//div[@class='col-12 col-md-6']/*|text()")}
-              </div>
-            </div>
-          </div>
-          <div class="col-11 col-md-3">
-            <div class="x-up-card">
-              <div class="content">
-                ${select(".//div[@class='col-11 col-md-3']/*|text()")}
-              </div>
-            </div>
-          </div>
+        </div>
       </div>
     </div>
-
-    <div id="page-builder" class="page-builder-container" style="display: none;"></div>
   </main>
-
+      
   <div class="tray--newsroom-contact">
     <div class="container">
       <div class="row">
@@ -315,6 +298,6 @@
       </div>
     </div>
   </footer>
-    
+
 </py:match>
-</div>
+</html>
