add title to heron bird

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -86,14 +86,23 @@
     <div class="header">
       <h1>HERON Research Data Repository</h1>
     </div>
-
-    <p>
-      <img src="av/220px-Heron_tricol_01.JPG" alt="" title="Heron" width="250" height="300" class="float-md-right ml-0 ml-md-3 mb-4 d-block img-fluid" />
-      HERON (Healthcare Enterprise Repository for Ontological Narration) is a search discovery tool that allows KUMC faculty members to search de-identified data 
-      from various hospital and medical center sources including Epic/O2 (the hospital electronic medical record). By combining the various data sources, researchers 
-      can look at the data in new ways not available when viewing data in one source at a time.
-    </p>
-
+    <div class="image-outer-wrapper image-outer-wrapper--right">
+      <div class="image-wrapper img-width-hook">
+        <img src="av/220px-Heron_tricol_01.JPG" alt="Surgical mask atop household scale" />
+      </div>
+      <span class="caption" style="width: 400px;">
+        photo credit: <a href="https://commons.wikimedia.org/wiki/User:Chrharshaw" title = "wikimedia">Christopher Harshaw</a>
+      </span>
+    </div>
+    <div class="news-copy">
+      <div class="container">
+        <p>
+          HERON (Healthcare Enterprise Repository for Ontological Narration) is a search discovery tool that allows KUMC faculty members to search de-identified data 
+          from various hospital and medical center sources including Epic/O2 (the hospital electronic medical record). By combining the various data sources, researchers 
+          can look at the data in new ways not available when viewing data in one source at a time.
+        </p>
+      </div>
+    </div>
     <div class="accordion" id="accordion-parent">
       <div class="card">
         <div class="card-header" id="heading-1" aria-label="Open Reasons to use HERON accordion">
@@ -225,7 +234,41 @@
           </div>
         </div>
       </div>
+      
+      <div class="card">
+        <div class="card-header" id="heading-6" aria-label="Open Citing HERON accordion">
+          <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapse-9e6ce07f1b734e228e3988cfaa8fe1e8-6" aria-expanded="false" aria-controls="collapse-9e6ce07f1b734e228e3988cfaa8fe1e8-6">
+            Citing HERON
+          </button>
+        </div>
+        <div id="collapse-9e6ce07f1b734e228e3988cfaa8fe1e8-6" class="collapse" aria-labelledby="heading-6" data-parent="#accordion-parent">
+          <div class="card-body">
+            <p>Any publication that results from a project utilizing HERON should cite grant support and HERON:</p>
+            <ul class="links">
+              <li><cite><a href = "http://www.kufrontiers.org/about/citing-frontiers.html" title = "CTSA Citation">CTSA Award # UL1TR002366</a></cite> </li>
+              <li><cite><a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3243191/">
+                Expressing observations from electronic medical record flowsheets in an i2b2 based clinical data repository to support research and quality improvement.</a></cite><br/>
+                Waitman LR1, Warren JJ, Manos EL, Connolly DW.<br/>
+                AMIA Annu Symp Proc. 2011;2011:1454-63. Epub 2011 Oct 22.
+              </li>
+              <li><cite><a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3000779/">Serving the enterprise and beyond with informatics for integrating biology and the bedside (i2b2).</a></cite><br/>
+                Murphy SN, Weber G, Mendis M, Gainer V, Chueh HC, Churchill S, Kohane I.<br/>
+                J Am Med Inform Assoc. 2010 Mar-Apr;17(2):124-30. doi: 10.1136/jamia.2009.000893.
+              </li>
+            </ul>
+            <p>Publications referencing HERON and the Greater Plains Collaborative (GPC) should also cite the GPC:</p>
   
+            <ul>
+              <li><cite><a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4078294/">
+                The Greater Plains Collaborative: a PCORnet Clinical Research Data Network</a></cite><br/>
+              Lemuel R Waitman, Lauren S Aaronson, Prakash M Nadkarni, Daniel W Connolly, James R Campbell<br/>
+              J Am Med Inform Assoc 2014;21:637-641 doi:10.1136/amiajnl-2014-002756
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
     </div>
 
   </div>
@@ -307,42 +350,6 @@
     <ul>
       <li>Let us know what you think: <a href="https://redcap.kumc.edu/surveys/?s=3SBkPg&amp;tool=1">Gripe/Praise</a></li>
     </ul>
-
-    <div class="accordion" id="accordion-parent">
-      <div class="card">
-        <div class="card-header" id="heading-6" aria-label="Open Citing HERON accordion">
-          <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapse-9e6ce07f1b734e228e3988cfaa8fe1e8-6" aria-expanded="false" aria-controls="collapse-9e6ce07f1b734e228e3988cfaa8fe1e8-6">
-            Citing HERON
-          </button>
-        </div>
-        <div id="collapse-9e6ce07f1b734e228e3988cfaa8fe1e8-6" class="collapse" aria-labelledby="heading-6" data-parent="#accordion-parent">
-          <div class="card-body">
-            <p>Any publication that results from a project utilizing HERON should cite grant support and HERON:</p>
-            <ul class="links">
-              <li><cite><a href = "http://www.kufrontiers.org/about/citing-frontiers.html" title = "CTSA Citation">CTSA Award # UL1TR002366</a></cite> </li>
-              <li><cite><a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3243191/">
-                Expressing observations from electronic medical record flowsheets in an i2b2 based clinical data repository to support research and quality improvement.</a></cite><br/>
-                Waitman LR1, Warren JJ, Manos EL, Connolly DW.<br/>
-                AMIA Annu Symp Proc. 2011;2011:1454-63. Epub 2011 Oct 22.
-              </li>
-              <li><cite><a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3000779/">Serving the enterprise and beyond with informatics for integrating biology and the bedside (i2b2).</a></cite><br/>
-                Murphy SN, Weber G, Mendis M, Gainer V, Chueh HC, Churchill S, Kohane I.<br/>
-                J Am Med Inform Assoc. 2010 Mar-Apr;17(2):124-30. doi: 10.1136/jamia.2009.000893.
-              </li>
-            </ul>
-            <p>Publications referencing HERON and the Greater Plains Collaborative (GPC) should also cite the GPC:</p>
-  
-            <ul>
-              <li><cite><a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4078294/">
-                The Greater Plains Collaborative: a PCORnet Clinical Research Data Network</a></cite><br/>
-              Lemuel R Waitman, Lauren S Aaronson, Prakash M Nadkarni, Daniel W Connolly, James R Campbell<br/>
-              J Am Med Inform Assoc 2014;21:637-641 doi:10.1136/amiajnl-2014-002756
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
 
   </div>
 
