--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -88,10 +88,10 @@
     </div>
     <div class="image-outer-wrapper image-outer-wrapper--right">
       <div class="image-wrapper img-width-hook">
-        <img src="av/220px-Heron_tricol_01.JPG" alt="Surgical mask atop household scale" />
+        <img src="av/220px-Heron_tricol_01.JPG" alt="" />
       </div>
-      <span class="caption" style="width: 400px;">
-        photo credit: <a href="https://commons.wikimedia.org/wiki/User:Chrharshaw" title = "wikimedia">Christopher Harshaw</a>
+      <span class="caption" style="width: 300px;">
+        photo credit: <a href="https://commons.wikimedia.org/wiki/User:Chrharshaw" target = "_blank" title = "wikimedia">Christopher Harshaw</a>
       </span>
     </div>
     <div class="news-copy">
@@ -268,9 +268,7 @@
           </div>
         </div>
       </div>
-
     </div>
-
   </div>
 
   <div class="col-11 col-md-3">
