--- a/heron_wsgi/templates/kumc_layout.xml
+++ b/heron_wsgi/templates/kumc_layout.xml
@@ -40,6 +40,7 @@
                 </ul>
               </div>
             </div>
+            <a href="https://heron.kumc.edu/heron/"><h1>Heron</h1></a>
             <nav class="main-nav d-none d-lg-flex" aria-label="Main navigation">
               <ul>
                 <li class="">
@@ -47,6 +48,9 @@
                 </li>
                 <li class="">
                   <a tabindex="0" class="touch-link" aria-haspopup="true" title="Facilities &amp; Resources" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/facilities-and-resources.html">Facilities &amp; Resources</a>
+                </li>
+                <li class="">
+                  <a tabindex="0" class="touch-link" aria-haspopup="true" title="Frontiers" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/frontiers-and-pioneers-registries.html">Frontiers</a>
                 </li>
                 <li class="">
                   <a tabindex="0" class="touch-link" aria-haspopup="true" title="About the Medical Informatics division" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/about/faculty-and-staff.html">About</a>
