change table header to auto scale

--- a/heron_wsgi/templates/build_team.html
+++ b/heron_wsgi/templates/build_team.html
@@ -21,11 +21,11 @@
       <table class="table text-wrap" py:if="people">
         <thead>
           <tr>
-            <th scope="col" style="width: 10%;"></th>
-            <th scope="col" style="width: 42%;">Name</th>
-            <th scope="col" style="width: 44%;">Email</th>
-            <th scope="col" style="width: 50%;">Title</th>
-            <th scope="col" style="width: 100%;">Department</th>
+            <th></th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Title</th>
+            <th>Department</th>
           </tr>
         </thead>
         <tbody>
@@ -51,12 +51,12 @@
         <table class="table text-wrap">
           <thead>
             <tr>
-              <th scope="col" style="width: 10%;"></th>
-              <th scope="col" style="width: 42%;">Name</th>
-              <th scope="col" style="width: 44%;">User ID</th>
-              <th scope="col" style="width: 50%;">Email</th>
-              <th scope="col" style="width: 35%;">Phone</th>
-              <th scope="col" style="width: 100%;">Account Disabled</th>
+              <th></th>
+              <th>Name</th>
+              <th>User ID</th>
+              <th>Email</th>
+              <th>Phone</th>
+              <th>Account Disabled</th>
             </tr>
           </thead>
           <tbody>
