add a select in table

--- a/heron_wsgi/templates/build_team.html
+++ b/heron_wsgi/templates/build_team.html
@@ -21,7 +21,7 @@
       <table class="table text-wrap" py:if="people">
         <thead>
           <tr>
-            <th></th>
+            <th>Select</th>
             <th>Name</th>
             <th>Email</th>
             <th>Title</th>
@@ -51,7 +51,7 @@
         <table class="table text-wrap">
           <thead>
             <tr>
-              <th></th>
+              <th>Select</th>
               <th>Name</th>
               <th>User ID</th>
               <th>Email</th>
