--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div py:if="'checked' in repositoryAccess">
-      <a  class="promo-link" href="${i2b2_login_path}"><i class="fas fa-chevron-right"></i>Start HERON Search</a>
+      <a  class="promo-link" href="${i2b2_login_path}"><i class="fas fa-angle-double-right red-color"></i>Start HERON Search</a>
     </div>
     
     <div py:if="'checked' not in repositoryAccess">
@@ -87,10 +87,10 @@
       <h1>HERON Research Data Repository</h1>
     </div>
     <div class="image-outer-wrapper image-outer-wrapper--right">
-      <div class="image-wrapper img-width-hook">
+      <div class="image-wrapper img-width-hook" style="width: 300px;">
         <img src="av/220px-Heron_tricol_01.JPG" alt="" />
       </div>
-      <span class="caption" style="width: 200px;">
+      <span class="caption" style="width: 250px;">
         photo credit: <a href="https://commons.wikimedia.org/wiki/User:Chrharshaw" target = "_blank" title = "wikimedia">Christopher Harshaw</a>
       </span>
     </div>
